--- a/reactive/pom.xml
+++ b/reactive/pom.xml
@@ -8,25 +8,29 @@
 	<packaging>pom</packaging>
 	<name>reactive</name>
 	<description>Reactive Programming parent POM</description>
-	<properties>
-		<java.version>14</java.version>
-	</properties>
+
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.3.1.RELEASE</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+	
+	<properties>
+		<java.version>14</java.version>
+	</properties>
+	
 	<modules>
 		<module>webflux</module>
 		<module>models</module>
+		<module>rxjava</module>
 	</modules>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-    		<optional>true</optional>
+			<optional>true</optional>
 		</dependency>
 	</dependencies>
 </project>
