--- a/reactive/rxjava/src/main/resources/application.yml
+++ b/reactive/rxjava/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 spring:
   application:
-    name: Crypto Currency Monitor (Spring WebFlux)
+    name: Crypto Currency Monitor (RxJava)
 debug: false
 logging:
   level:
     root: info
 server:
-  port: 8081
+  port: 8082
 custom.property:
   proxy:
     host: proxy.corp.com
