--- a/reactive/pom.xml
+++ b/reactive/pom.xml
@@ -13,13 +13,15 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.3.1.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	
+
 	<properties>
 		<java.version>14</java.version>
+		<akka.version>2.6.8</akka.version>
+		<scala.binary.version>2.13</scala.binary.version>
 	</properties>
-	
+
 	<modules>
 		<module>webflux</module>
 		<module>models</module>
