Completed Vert.x implementation

--- a/reactive/vertx/pom.xml
+++ b/reactive/vertx/pom.xml
@@ -24,7 +24,7 @@
 		</dependency>
 		<dependency>
 			<groupId>io.vertx</groupId>
-			<artifactId>vertx-rx-java</artifactId>
+			<artifactId>vertx-rx-java2</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>io.vertx</groupId>
@@ -33,10 +33,6 @@
 		<dependency>
 			<groupId>io.vertx</groupId>
 			<artifactId>vertx-web-client</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>io.vertx</groupId>
-			<artifactId>vertx-circuit-breaker</artifactId>
 		</dependency>
 
 		<dependency>
